Lock camera height at 1.5

--- a/index.html
+++ b/index.html
@@ -807,9 +807,11 @@
             rigGoal.set(0, CAMERA_START_POSITION.y, targetZ);
           } else {
             rigGoal.copy(focusRigTarget);
+            rigGoal.y = CAMERA_START_POSITION.y;
           }
 
           cameraRig.position.lerp(rigGoal, 0.08);
+          cameraRig.position.y = CAMERA_START_POSITION.y;
           if (!cameraLocked) {
             walkwayReturnPosition.set(0, CAMERA_START_POSITION.y, cameraRig.position.z);
           }
