Use local title screen for first cabinet

--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
           name: 'Starship Courier',
           description: 'Deliver critical data across neon voids while dodging rogue drones and cosmic storms.',
           url: 'https://example.com/starship-courier',
-          thumbnail: 'https://images.unsplash.com/photo-1511512578047-dfb367046420?auto=format&fit=crop&w=600&q=80',
+          thumbnail: './assets/cabinet-screens/sword-guys-title.png',
         },
         {
           name: 'Circuit Breaker',
