Update Sword Guys cabinet details

--- a/index.html
+++ b/index.html
@@ -467,9 +467,9 @@
       const games = [
         // Add new cabinets here. Each entry controls the cabinet model, its overlay content, and link.
         {
-          name: 'Starship Courier',
-          description: 'Deliver critical data across neon voids while dodging rogue drones and cosmic storms.',
-          url: 'https://example.com/starship-courier',
+          name: 'Sword Guys',
+          description: 'Team up with your blade-slinging crew to carve through waves of neon rivals and claim the arena.',
+          url: 'https://pazneria.github.io/sword-guys',
           thumbnail: './assets/cabinet-screens/sword-guys-title.png',
         },
         {
