--- a/index.html
+++ b/index.html
@@ -798,7 +798,7 @@
           }
 
           setTimeout(() => {
-            window.open(gameUrl, '_blank', 'noopener');
+            window.location.href = gameUrl;
           }, 800);
         };
 
